--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /*Creo que para estuviera más optimizado se podría hacer una hoja de estilos diferente para cada página, para que entre otras cosas se cargaran sólo las fuentes necesarias(aunque esto se podría hacer en el header de cada página) y también por evitar el CSS exclusivo de cada página. No sé con seguridad qué sería lo correcto*/
 
 /* MEJORAS:
-media query menu
-paddings
-Menú responsive
+media query menu ok
+paddings %
+Menú responsive 
 Capitalze
 Transiciones
 Depurar CSS
@@ -122,6 +122,7 @@ header h1.logo {
 }
 
 header .hamburguesa {
+    position: relative;
     cursor: pointer;
     width: 2em;
     float: right;
@@ -134,8 +135,53 @@ header .hamburguesa div {
 }
 
 header nav .menu {
-    padding-top: 3.75em;
+    padding-top: 0em;
+    height: 0em;
+    width: 100%;
+    overflow: hidden;
+    transition: height .5s;
 }
+
+/* El toggle menu a través de labels e inputs */
+
+.inputOculto {
+    display: none;
+}
+
+input#off:checked~.menu {
+    height: 0em;
+}
+
+input#on:checked~.menu {
+    height: 26em;
+}
+
+.btnCerrar {
+    font-size: 4em;
+    color: #aaa;
+}
+
+header .hamburguesa:hover div {}
+
+/* header .hamburguesa:hover div:first-child::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: green;
+} */
+
+/* header .hamburguesa:hover+.menu>li:last-child::after, header:hover .menu>li:last-child::after, header nav .menu:hover>li:last-child::after {
+    content: "\2715";
+    display: inline-block;
+    margin-top: 1em;
+    font-weight: bold;
+    font-size: 2em;
+    padding: .3em;
+} */
+
+.menu>li:last-child::after:hover {}
 
 header nav .menu li {
     padding: 1.25em;
