--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,6 @@ header h1.logo {
 }
 
 header .hamburguesa {
-    position: relative;
     cursor: pointer;
     width: 2em;
     float: right;
@@ -135,53 +134,9 @@ header .hamburguesa div {
 }
 
 header nav .menu {
-    padding-top: 0em;
-    height: 0em;
-    width: 100%;
-    overflow: hidden;
-    transition: height .5s;
+    padding-top: 3.75em;
+    height: 0px;
 }
-
-/* El toggle menu a través de labels e inputs */
-
-.inputOculto {
-    display: none;
-}
-
-input#off:checked~.menu {
-    height: 0em;
-}
-
-input#on:checked~.menu {
-    height: 26em;
-}
-
-.btnCerrar {
-    font-size: 4em;
-    color: #aaa;
-}
-
-header .hamburguesa:hover div {}
-
-/* header .hamburguesa:hover div:first-child::after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    display: block;
-    background: green;
-} */
-
-/* header .hamburguesa:hover+.menu>li:last-child::after, header:hover .menu>li:last-child::after, header nav .menu:hover>li:last-child::after {
-    content: "\2715";
-    display: inline-block;
-    margin-top: 1em;
-    font-weight: bold;
-    font-size: 2em;
-    padding: .3em;
-} */
-
-.menu>li:last-child::after:hover {}
 
 header nav .menu li {
     padding: 1.25em;
